src/snapshots/afrotd__parser__tests__rule_5.2.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 6
title: Fouls zwischen den Downs
text: "Nach einer Distanzstrafe, die sich zwischen den Downs ereignet hat, muss die Nummer des nächsten Downs dieselbe sein, die vor dem Foul festgelegt wurde; es sei denn, die Durchführung eines Team B-Fouls bringt den Ball auf oder jenseits der Line to Gain oder die Strafe beinhaltet einen First Down (Regel 9.1.1) (A.R. 5.2.6.I, A.R. 10.1.5.I bis 10.1.5.III)."
interpretations: []
