src/snapshots/afrotd__parser__tests__rule_5.2.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 8
title: Fouls durch beide Teams
text: "Ereignen sich während eines Downs Fouls, die sich aufheben, muss der Down wiederholt werden (Ausnahme: Regel 10.1.4 Ausnahmen) (A.R. 10.1.4.III bis 10.1.4.VII)."
interpretations: []
