src/snapshots/afrotd__parser__tests__rule_6.1.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 4
title: Nichtbeachtung erzwungener Berührung
text: "\ta) Wird ein Spieler, der sich inbounds befindet, von einem Gegner in einen Free Kick geblockt, wird diese Berührung des Kicks nicht beachtet (A.R. 2.11.4.I).\n\tb) Wird ein im Feld befindlicher Spieler von einem Ball berührt, der von einem Gegner entweder geschlagen oder illegal getreten wurde, wird diese Berührung des Kicks nicht beachtet (Regel 2.11.4.c)."
interpretations: []
