src/snapshots/afrotd__parser__tests__rule_6.1.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 1
  - 5
title: "Free Kick, der zur Ruhe kommt"
text: "Kommt der Free Kick im Feld zur Ruhe und versucht kein Spieler, den Ball zu sichern, wird der Ball dead und gehört zum Receiving Team am Dead Ball Spot."
interpretations: []
